# MCP-Marketing

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy-portal.sh  deploy.sh  pyproject.toml
.github/workflows/: auto-merge-to-main.yml  ci.yml
docs/: PRD-Marketing-MCP-Server.docx
docs/superpowers/plans/: 2026-03-24-super-admin-dashboard.md
docs/superpowers/specs/: 2026-03-24-super-admin-dashboard-design.md
portal/: .env.example  Dockerfile  package.json
portal/src/: middleware.ts
portal/src/app/: globals.css  layout.tsx  page.tsx
portal/src/components/: admin-sidebar.tsx  sidebar.tsx  stat-card.tsx  topbar.tsx
portal/src/lib/: admin.ts  auth.ts  notifications.ts  oauth.ts  schema.ts  utils.ts
portal/src/types/: next-auth.d.ts
src/marketing_mcp/: __init__.py  __main__.py  cli_setup.py  server.py
src/marketing_mcp/admin/: __init__.py  routes.py  templates.py
src/marketing_mcp/agents/: __init__.py
src/marketing_mcp/clients/: __init__.py  bing_webmaster.py  builtwith.py  client_profiles.py  ga4.py  google_ads.py  google_business.py  google_drive.py  google_trends.py  hubspot.py  linkedin.py  mailchimp.py  meta.py  pagespeed.py  pinterest.py  reddit.py  search_console.py  semrush.py  shopify.py  tiktok.py  twitter.py  yelp.py  youtube.py
src/marketing_mcp/homepage/: routes.py  (+1 more)
tests/: conftest.py  test_cli_setup.py
tests/test_admin/: test_routes.py
tests/test_clients/: test_ga4.py  test_google_ads.py  test_google_business.py  test_google_drive.py  test_google_trends.py  test_meta.py  test_pagespeed.py  test_reddit.py  test_search_console.py  test_youtube.py
tests/test_utils/: test_auth.py  test_cache.py  test_errors.py  test_formatting.py
(+62 files in other folders)
